--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,27 @@
     list-style: none;
     text-decoration: none;
 }
+.header {
+    background: url(../images/header_bg.jpg) no-repeat center center /cover;
+    height: 660px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.header__nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1110px;
+    width: 100%;
+}
+.header__menu {
+    display: flex;
+}
+.header__content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
